[gd_scene load_steps=18 format=2]

[ext_resource path="res://INVASION2000.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://World/flag.png" type="Texture" id=2]
[ext_resource path="res://World/Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Zap/Zap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Zap/ChaseWall.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Wall.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Deathzone.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Floor.tscn" type="PackedScene" id=9]
[ext_resource path="res://Defense/Defense.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/hatch.png" type="Texture" id=11]
[ext_resource path="res://Main.gd" type="Script" id=12]
[ext_resource path="res://Cannon/Cannon.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/wallpaper.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 12 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 307, 328 )

[node name="Sprite" type="Sprite" parent="SpawnPosition"]
texture = ExtResource( 11 )

[node name="Defense" parent="." instance=ExtResource( 10 )]
position = Vector2( 551, 343 )

[node name="AttackerGoal" type="Area2D" parent="."]
position = Vector2( 1441, 334 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackerGoal"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="AttackerGoal"]
position = Vector2( -1, 0 )
texture = ExtResource( 2 )

[node name="Wallpaper" type="Sprite" parent="."]
position = Vector2( 282, 326 )
z_index = -1
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 180 )

[node name="Ceiling" parent="." instance=ExtResource( 9 )]
position = Vector2( 282, 127 )
scale = Vector2( 1000, 50 )

[node name="Floor" parent="." instance=ExtResource( 9 )]
position = Vector2( 282, 531 )
scale = Vector2( 1000, 50 )

[node name="Platform" parent="." instance=ExtResource( 6 )]
position = Vector2( 457, 345 )

[node name="Platform2" parent="." instance=ExtResource( 6 )]
position = Vector2( 317, 398 )

[node name="Platform3" parent="." instance=ExtResource( 6 )]
position = Vector2( 409, 345 )

[node name="Platform10" parent="." instance=ExtResource( 6 )]
position = Vector2( 347, 296 )

[node name="Platform4" parent="." instance=ExtResource( 6 )]
position = Vector2( 505, 345 )

[node name="Platform5" parent="." instance=ExtResource( 6 )]
position = Vector2( 620, 360 )

[node name="Platform6" parent="." instance=ExtResource( 6 )]
position = Vector2( 620, 310 )

[node name="Platform7" parent="." instance=ExtResource( 6 )]
position = Vector2( 668, 360 )

[node name="Platform8" parent="." instance=ExtResource( 6 )]
position = Vector2( 812, 369 )

[node name="Platform9" parent="." instance=ExtResource( 6 )]
position = Vector2( 948, 383 )

[node name="Platform11" parent="." instance=ExtResource( 6 )]
position = Vector2( 1442, 346 )

[node name="Platform12" parent="." instance=ExtResource( 6 )]
position = Vector2( 1191, 343 )

[node name="Platform13" parent="." instance=ExtResource( 6 )]
position = Vector2( 1191, 314 )

[node name="Platform15" parent="." instance=ExtResource( 6 )]
position = Vector2( 1297, 384 )

[node name="Platform16" parent="." instance=ExtResource( 6 )]
position = Vector2( 1143, 314 )

[node name="Platform17" parent="." instance=ExtResource( 6 )]
position = Vector2( 1095, 314 )

[node name="Platform18" parent="." instance=ExtResource( 6 )]
position = Vector2( 1095, 343 )

[node name="Platform19" parent="." instance=ExtResource( 6 )]
position = Vector2( 813, 293 )

[node name="Platform20" parent="." instance=ExtResource( 6 )]
position = Vector2( 861, 293 )

[node name="Platform14" parent="." instance=ExtResource( 6 )]
position = Vector2( 1143, 343 )

[node name="Wall" parent="." instance=ExtResource( 7 )]
position = Vector2( 1213, 361 )

[node name="Wall3" parent="." instance=ExtResource( 7 )]
position = Vector2( 457, 363 )

[node name="Wall13" parent="." instance=ExtResource( 7 )]
position = Vector2( 321, 310 )

[node name="Wall14" parent="." instance=ExtResource( 7 )]
position = Vector2( 321, 342 )

[node name="Wall16" parent="." instance=ExtResource( 7 )]
position = Vector2( 293, 310 )

[node name="Wall17" parent="." instance=ExtResource( 7 )]
position = Vector2( 293, 342 )

[node name="Wall15" parent="." instance=ExtResource( 7 )]
position = Vector2( 343, 384 )

[node name="Wall4" parent="." instance=ExtResource( 7 )]
position = Vector2( 594, 305 )

[node name="Wall5" parent="." instance=ExtResource( 7 )]
position = Vector2( 743, 267 )

[node name="Wall6" parent="." instance=ExtResource( 7 )]
position = Vector2( 743, 384 )

[node name="Wall7" parent="." instance=ExtResource( 7 )]
position = Vector2( 743, 299 )

[node name="Wall2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1073, 296 )

[node name="Wall11" parent="." instance=ExtResource( 7 )]
position = Vector2( 1319, 282 )

[node name="Wall8" parent="." instance=ExtResource( 7 )]
position = Vector2( 886, 307 )

[node name="Wall9" parent="." instance=ExtResource( 7 )]
position = Vector2( 972, 279 )

[node name="Wall10" parent="." instance=ExtResource( 7 )]
position = Vector2( 1026, 352 )

[node name="Zap" parent="." instance=ExtResource( 4 )]
position = Vector2( 1464, 304 )

[node name="Zap2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1464, 349 )

[node name="Zap3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1464, 394 )

[node name="Zap4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1464, 259 )

[node name="Box" parent="." instance=ExtResource( 3 )]
position = Vector2( 972, 303 )

[node name="Box2" parent="." instance=ExtResource( 3 )]
position = Vector2( 816, 359 )

[node name="Box3" parent="." instance=ExtResource( 3 )]
position = Vector2( 614, 300 )

[node name="Box4" parent="." instance=ExtResource( 3 )]
position = Vector2( 409, 335 )

[node name="Box5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1119, 378 )

[node name="Box7" parent="." instance=ExtResource( 3 )]
position = Vector2( 1261, 313 )

[node name="Box8" parent="." instance=ExtResource( 3 )]
position = Vector2( 1296, 348 )

[node name="Box6" parent="." instance=ExtResource( 3 )]
position = Vector2( 547, 392 )

[node name="DeathzoneTop" parent="." instance=ExtResource( 8 )]
position = Vector2( 860, 239 )
scale = Vector2( -1, -1 )
z_index = -1

[node name="DeathzoneBottom" parent="." instance=ExtResource( 8 )]
position = Vector2( 860, 419 )
z_index = -1

[node name="PlayerHelp" type="Label" parent="."]
margin_left = 231.0
margin_top = 420.0
margin_right = 1189.0
margin_bottom = 621.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 3 )
text = "A / D to move
SPACE to jump / jetpack"
align = 1

[node name="UI" type="Label" parent="."]
margin_left = 264.0
margin_top = 282.0
margin_right = 1222.0
margin_bottom = 483.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 3 )
text = "Round: "
align = 1

[node name="GameOverOffense" type="Label" parent="."]
visible = false
margin_left = 310.0
margin_top = 214.0
margin_right = 1750.0
margin_bottom = 415.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 3 )
text = "Game Over, offense made it to the goal"
align = 1

[node name="GameOverDefense" type="Label" parent="."]
visible = false
margin_left = 310.0
margin_top = 214.0
margin_right = 1750.0
margin_bottom = 415.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 3 )
text = "Game Over, all attackers died"
align = 1

[node name="DefenseHelp" type="Label" parent="."]
visible = false
margin_left = 401.0
margin_top = 420.0
margin_right = 1359.0
margin_bottom = 689.0
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 3 )
text = "A / D to pan camera
MOUSE to move trap
( 1 to skip if stuck )
"
align = 1

[node name="cannon" parent="." instance=ExtResource( 13 )]
position = Vector2( 542, 431 )
scale = Vector2( -1, 1 )

[node name="ChaseWall" parent="." instance=ExtResource( 5 )]
position = Vector2( 55, 329 )
speed = 85

[connection signal="area_entered" from="AttackerGoal" to="." method="_on_AttackerGoal_area_entered"]
